--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -5,7 +5,7 @@
 
     <div class="row justify-content-center mb-3">
       <div class="col-md-9 text-center">
-        <h1 id="hometext" class="font-weight-bold">Welcome to my portfolio!😊</h1>
+        <h1 id="hometext" class="font-weight-bold">Добро пожаловать в моё портфолио!😊</h1>
       </div>
     </div>
 
