Translate to russian in Admin menu

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -11,7 +11,7 @@
 
     <div class="row justify-content-center my-3">
       <div class="col-5">
-        <img src="{% static 'portfolio/red_cat.jpg' %}" class="img-fluid" height="500">
+        <img src="{% static 'portfolio/red_cat.jpg' %}" class="img-fluid">
       </div>
     </div>
 
