--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -23,12 +23,13 @@
   <div class="col-lg-4 col-md-6">
 
         {% if project.url %}
-            <a href="{{ project.url }}"><img src="{{ project.image.url }}" class="img-fluid mb-2"></img></a>
+            <a href="{{ project.url }}"  target="_blank"><img src="{{ project.image.url }}" class="img-fluid mb-2"></img></a>
+            <h3>{{ project.title }}</h3>
         {% else %}
             <img src="{{ project.image.url }}"class="img-fluid mb-2"></img>
+            <h3>{{ project.title }}</h3>
         {% endif %}
 
-        <h3>{{ project.title }}</h3>
         <p>{{ project.description }}</p>
   </div>
     {% endfor %}
