--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -24,7 +24,7 @@
 
         {% if project.url %}
             <a href="{{ project.url }}"  target="_blank"><img src="{{ project.image.url }}" class="img-fluid mb-2"></img></a>
-            <a href="{{ project.url }}"  target="_blank"><h3>{{ project.title }}</h3></a>
+            <a href="{{ project.url }}"  target="_blank" style="color: black;"><h3>{{ project.title }}</h3></a>
         {% else %}
             <img src="{{ project.image.url }}"class="img-fluid mb-2"></img>
             <h3>{{ project.title }}</h3>
