--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -5,13 +5,13 @@
 
     <div class="row justify-content-center mb-3">
       <div class="col-md-9 text-center">
-        <h1 id="hometext" class="font-weight-bold">Добро пожаловать в моё портфолио!😊</h1>
+        <h1 id="hometext" class="font-weight-bold">Добро пожаловать в моё портфолио!</h1>
       </div>
     </div>
 
     <div class="row justify-content-center my-3">
       <div class="col-5">
-        <img src="{% static 'portfolio/red_cat.jpg' %}" class="img-fluid">
+        <img src="{% static 'portfolio/forMain.jpg' %}" class="img-fluid">
       </div>
     </div>
 
