--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="row justify-content-center my-3">
-      <div class="col-5">
+      <div class="container-fluid" align="center">
         <img src="{% static 'portfolio/forMain.jpg' %}" class="img-fluid">
       </div>
     </div>
